branch 35-style-embed-video    fix: video not centered in browser 	modified:   blocks/embed/embed.css

--- a/blocks/embed/embed.css
+++ b/blocks/embed/embed.css
@@ -1,7 +1,7 @@
 main .embed {
-  width: unset;
+  width: 100%;
   text-align: center;
-  max-width: 800px;
+  max-width: 100%;
 }
 
 main .embed > div {
@@ -14,7 +14,7 @@ main .embed figure.video {
 }
 
 main .embed video.video-embed-item {
-  max-width: 800px;
+  max-width: 100%;
 }
 
 main .embed.embed-facebook {
